# PromptCli

./: .gitignore  LICENSE.txt  README.md  cli.py  gateway.py  pyproject.toml
prompt_cli/: __about__.py  cli.py  cli_prompt.py  config.py  gateway.py
prompt_cli/config/: prompts.py
prompt_cli/test/: test.py
tests/: __init__.py
